--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2887,6 +2887,25 @@
 % Then he put a three-day journey between himself and Jacob, while Jacob was shepherding the rest of Laban’s flocks.
 \N 然后雅各在牧养拉班其余羊群时，他使他自己和雅各之间相隔了三天的路程。
 
+% Jacob, however, took fresh branches of poplar, almond, and plane trees, and peeled the bark, exposing the white inner wood of the branches.
+\N 尽管如此，雅各取了白杨，扁桃和悬铃木的新鲜树枝，并剥了树皮，露出树枝里面的白色木质。
+% Then he set the peeled branches in the watering troughs in front of the flocks coming in to drink. So when the flocks were in heat and came to drink,
+\N 然后他将剥了的树枝立在汲水槽中，放在过来饮水的羊群面前。所有当羊群发情时而过来饮水时，
+% they mated in front of the branches. And they bore young that were streaked or speckled or spotted.
+\N 它们在树枝面前交配。它们就生下带条纹或斑点或花斑的小羊。
+% Jacob set apart the young, but made the rest face the streaked dark-colored sheep in Laban’s flocks. Then he set his own stock apart and did not put them with Laban’s animals.
+\N 雅各将这些小羊分别，但使拉班羊群中其余的面向这些条纹深色的绵羊。然后他将他自己的家畜分别，而不将它们与拉班的牲口放在一起。
+
+% Whenever the stronger females of the flock were in heat, Jacob would place the branches in the troughs, in full view of the animals, so that they would breed in front of the branches.
+\N 每当羊群中更强壮的雌性发情时，雅各会将树枝放在水槽中，让牲口完全看见，以使它们能在树枝面前配种。
+% But if the animals were weak, he did not set out the branches. So the weaker animals went to Laban and the stronger ones to Jacob.
+\N 但如果牲口弱小，他就不设置树枝。所以较弱小的牲口归拉班而更强壮的归雅各。
+
+% Thus Jacob became exceedingly prosperous. He owned large flocks, maidservants and menservants, and camels and donkeys.
+\N 因此雅各变得极其兴旺。他拥有大量羊群、女仆和男仆，以及骆驼和驴。
+
+
+
 \thispagestyle{empty}
 \newpage
 
