--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1852,7 +1852,7 @@
 \N 在他们在别是巴立下协定后，亚比米勒和他军队的指挥官非各起身并返回非利士人的土地。
 
 % And Abraham planted a tamarisk tree in Beersheba, and there he called upon the name of the LORD, the Eternal God.
-\N 而亚伯拉罕在别是巴栽了一棵怪柳树，而他在那里求靠耶和华、永恒上帝的名。
+\N 而亚伯拉罕在别是巴栽了一棵柽柳树，而他在那里求靠耶和华、永恒上帝的名。
 % And Abraham resided in the land of the Philistines for a long time.
 \N 而亚伯拉罕在非利士人的土地上定居了很长时间。
 
