--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2905,6 +2905,43 @@
 \N 因此雅各变得极其兴旺。他拥有大量羊群、女仆和男仆，以及骆驼和驴。
 
 
+% Genesis 31
+\section{第三十一章}
+
+% Jacob Flees from Laban
+\subsection*{雅各逃离拉班}
+
+% Now Jacob heard that Laban’s sons were saying, “Jacob has taken away all that belonged to our father and built all this wealth at our father’s expense.”
+\N 现在雅各听到拉班的儿子们在说，“雅各已夺走属于我们父亲的所有，而用我们父亲的代价建立这所有钱财。”
+% And Jacob saw from the countenance of Laban that his attitude toward him had changed.
+\N 而雅各从拉班的面容看见他对他态度已改变。
+
+% Then the LORD said to Jacob, “Go back to the land of your fathers and to your kindred, and I will be with you.”
+\N 然后耶和华对雅各说，“回到你先祖们的土地并回到你亲属那里，而我会与你同在。”
+
+% So Jacob sent word and called Rachel and Leah to the field where his flocks were,
+\N 所以雅各送话并将拉结和利亚叫到他羊群所在的田地，
+% and he told them, “I can see from your father’s countenance that his attitude toward me has changed; but the God of my father has been with me.
+\N 而他告诉她们，“我能从你们父亲面容看见他对我的态度已改变；但我父亲的上帝已与我同在。
+% You know that I have served your father with all my strength.
+\N 你们知道我已用我所有的力量服侍你们的父亲。
+% And although he has cheated me and changed my wages ten times, God has not allowed him to harm me.
+\N 而尽管他已欺骗我并改变我的工价十次，上帝未曾允许他来伤害我。
+% If he said, ‘The speckled will be your wages,’ then the whole flock bore speckled offspring. If he said, ‘The streaked will be your wages,’ then the whole flock bore streaked offspring.
+\N 如果他说，‘带斑点的会是你的工价，’那么整个羊群就生下带斑点的羊崽。如果他说，‘带条纹的会是你的工价，’那么整个羊群就生下带条纹的羊崽。
+% Thus God has taken away your father’s livestock and given them to me.
+\N 因此上帝已夺去你们父亲的牲畜并将它们赐给我。
+
+% When the flocks were breeding, I saw in a dream that the streaked, spotted, and speckled males were mating with the females.
+\N 当牲畜正在配种时，我在一个梦中看见带条纹、花斑和斑点的雄性正与雌性交配。
+% In that dream the angel of God said to me, ‘Jacob!’
+\N 在那梦中上帝的使者对我说，“雅各！”
+
+% And I replied, ‘Here I am.’
+而我回复，“我在这里。”
+
+
+
 
 \thispagestyle{empty}
 \newpage
