--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2940,6 +2940,58 @@
 % And I replied, ‘Here I am.’
 而我回复，“我在这里。”
 
+% ‘Look up,’ he said, ‘and see that all the males that are mating with the flock are streaked, spotted, or speckled; for I have seen all that Laban has done to you.
+\N ‘向上看，’他说，‘就看见所有与羊群交配的雄性是带条纹、花斑和斑点的；因为我已看见拉班已对你做的所有。
+% I am the God of Bethel, where you anointed the pillar and made a solemn vow to Me. Now get up, leave this land at once, and return to your native land.’”
+\N 我是伯特利的上帝，你在那里膏了石柱并对我立下一个庄严的誓约。现在起身，立即离开这土地，并返回你的故土。’”
+
+% And Rachel and Leah replied, “Do we have any portion or inheritance left in our father’s house?
+\N 而拉结和利亚回复，“我们在我们父亲家族中剩有任何份额或遗产吗？
+% Are we not regarded by him as outsiders? Not only has he sold us, but he has certainly squandered what was paid for us.
+\N 我们不是被他当作外人吗？他不仅已卖了我们，而且他肯定已挥霍该付酬给我们的。
+% Surely all the wealth that God has taken away from our father belongs to us and to our children. So do whatever God has told you.”
+\N 无疑所有上帝已从我们父亲夺去的钱财属于我们并属于我们的孩子。所以任由你做上帝已吩咐你的。”
+
+% Then Jacob got up and put his children and his wives on camels,
+\N 然后雅各起身并将他的孩子和他的妻子放在骆驼上，
+% and he drove all his livestock before him, along with all the possessions he had acquired in Paddan-aram, to go to his father Isaac in the land in Canaan.
+\N 而他将他所有牲口赶到他前面，连同他在巴旦亚兰已获取的所有财产，以去到他在迦南土地的父亲以撒那里。
+
+% Now while Laban was out shearing his sheep, Rachel stole her father’s household idols.
+\N 现在拉班正在外剪羊毛时，拉结偷了她父亲家室的偶像。
+% Moreover, Jacob deceived Laban the Aramean by not telling him that he was running away.
+\N 此外，雅各欺骗亚兰人拉班不告诉他他正在逃离。
+% So he fled with all his possessions, crossed the Euphrates, and headed for the hill country of Gilead.
+\N 所以他带着他所有财产逃走，穿过幼发拉底，并前往基列山地。
+
+% Laban Pursues Jacob
+\subsection*{拉班追赶雅各}
+
+% On the third day Laban was informed that Jacob had fled.
+\N 在第三天拉班被告知雅各已逃走。
+% So he took his relatives with him, pursued Jacob for seven days, and overtook him in the hill country of Gilead.
+\N 所以他带着他的亲戚与他一同，追赶雅各七天，并在基列山地赶上了他。
+% But that night God came to Laban the Aramean in a dream and warned him, “Be careful not to say anything to Jacob, either good or bad.”
+\N 但那晚上帝来到亚兰人拉班的梦中并警告他，“小心不要对雅各说任何话，无论好坏。”
+
+% Now Jacob had pitched his tent in the hill country of Gilead when Laban overtook him, and Laban and his relatives camped there as well.
+\N 现在当拉班赶上他时，雅各已在在基列山地搭起他的帐篷，而拉班和他的亲戚也在那里宿营。
+% Then Laban said to Jacob, “What have you done? You have deceived me and carried off my daughters like captives of war!
+\N 然后拉班对雅各说，“你已做的是什么？你已欺骗我并将我的女儿像战俘一样携走！
+% Why did you run away secretly and deceive me, without even telling me? I would have sent you away with joy and singing, with tambourines and harps.
+\N 你为何暗中逃离并欺骗我，甚至都不告诉我？我本会带着欢喜和歌声，用铃鼓和竖琴送你走。
+% But you did not even let me kiss my grandchildren and my daughters goodbye. Now you have done a foolish thing.
+\N 但你甚至不让我吻别我的外孙们和我的女儿们。现在你已做了一件愚蠢的事情。
+
+% I have power to do you great harm, but last night the God of your father said to me, ‘Be careful not to say anything to Jacob, either good or bad.’
+\N 我有权力极大地加害于你，但昨晚你父亲的上帝对我说，‘小心不要对雅各说任何话，无论好坏。’
+% Now you have gone off because you long for your father’s house. But why have you stolen my gods?”
+\N 现在因你思念你父亲的住处你已走掉。但你为何偷了我的神像呢？”
+
+% “I was afraid,” Jacob answered, “for I thought you would take your daughters from me by force.
+\N “我害怕，”雅各回答，“因为我以为你会将你的女儿们从我身边强行带走。
+% If you find your gods with anyone here, he shall not live! In the presence of our relatives, see for yourself if anything is yours, and take it back.” For Jacob did not know that Rachel had stolen the idols.
+\N 如果你发现你的神像同这里任何人在一起，他必不存活！当着我们亲戚的面，自己看看有没有是你的任何东西，并将它带回去。”因为雅各不知道拉结已偷了偶像。
 
 
 
