--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -644,7 +644,7 @@
 % On that very day Noah entered the ark, along with his sons Shem, Ham, and Japheth, and his wife, and the three wives of his sons—
 \N 正是在那天挪亚进入方舟，与他的儿子闪、含和雅弗，和他的妻子，以及他儿子们的三位妻子一道---
 % they and every kind of wild animal, livestock, crawling creature, bird, and winged creature.
-\N 他们和每一种野兽，牲畜，爬行生物，雀鸟，和有翼生物。
+\N 他们和每一种野生动物，牲畜，爬行生物，雀鸟，和有翼生物。
 % They came to Noah to enter the ark, two by two of every creature with the breath of life.
 \N 它们到挪亚这里进入方舟，每个有生命气息的生物两两成对。
 % And they entered, the male and female of every living thing, as God had commanded Noah. Then the LORD shut him in.
@@ -2992,6 +2992,31 @@
 \N “我害怕，”雅各回答，“因为我以为你会将你的女儿们从我身边强行带走。
 % If you find your gods with anyone here, he shall not live! In the presence of our relatives, see for yourself if anything is yours, and take it back.” For Jacob did not know that Rachel had stolen the idols.
 \N 如果你发现你的神像同这里任何人在一起，他必不存活！当着我们亲戚的面，自己看看有没有是你的任何东西，并将它带回去。”因为雅各不知道拉结已偷了偶像。
+
+% So Laban went into Jacob’s tent, then Leah’s tent, and then the tents of the two maidservants, but he found nothing. Then he left Leah’s tent and entered Rachel’s tent.
+\N 所以拉班走进雅各的帐篷，然后是利亚的帐篷，而后是两个女仆的帐篷，但他什么都没找到。然后他离开利亚的帐篷而进入拉结的帐篷中。
+% Now Rachel had taken Laban’s household idols, put them in the saddlebag of her camel, and was sitting on them. And Laban searched everything in the tent but found nothing.
+\N 现在拉结已拿了拉班的家神像，将它们放在祂骆驼的鞍囊中，而她就坐在它们上面。而拉班在帐篷中搜寻了一切但什么都没找到。
+
+% Rachel said to her father, “Sir, do not be angry that I cannot stand up before you; for I am having my period.” So Laban searched but could not find the household idols.
+\N 拉结对她父亲说，“尊父，不要为我不能在你面前站起而生气；因为我正在来月经。”所以拉班搜寻了却不能找到家神像。
+
+% Then Jacob became incensed and challenged Laban. “What is my crime?” he said. “For what sin of mine have you so hotly pursued me?
+\N 然后雅各被激怒而质询拉班。“我的罪是什么？”他说。“因我的何罪恶你才如此激烈地追赶我？
+% You have searched all my goods! Have you found anything that belongs to you? Put it here before my brothers and yours, that they may judge between the two of us.
+\N 你已搜寻了我所有的物品！你已找到任何属于你的东西吗？在我的众兄弟和你的众兄弟面前将它放在这里，以使他们能在我们俩之间评判。
+
+% I have been with you for twenty years now. Your sheep and goats have not miscarried, nor have I eaten the rams of your flock.
+\N 现在我已和你在一起二十年了。你的绵羊和山羊既未曾流过产，我也未曾吃过你羊群的公绵羊。
+% I did not bring you anything torn by wild beasts; I bore the loss myself. And you demanded payment from me for what was stolen by day or night.
+\N 我没将任何被野兽撕碎的带给你；我自己承受了损失。而不管白天或夜晚被偷的你都向我索求偿还。
+% As it was, the heat consumed me by day and the frost by night, and sleep fled from my eyes.
+\N 就这样，我白天受尽炎热、晚上受尽霜冻，而睡意离开了我眼睛。
+
+% Thus for twenty years I have served in your household—fourteen years for your two daughters and six years for your flocks—and you have changed my wages ten times!
+\N 因此我已在你的家室服侍二十年---十四年为你两个女儿而六年为你的羊群---而你已改变我的工价十次！
+% If the God of my father, the God of Abraham and the Fear of Isaac, had not been with me, surely by now you would have sent me away empty-handed. But God has seen my affliction and the toil of my hands, and last night He rendered judgment.”
+\N 如果我父亲的上帝，亚伯拉罕的上帝和以撒所的敬畏，未曾与我同在，无疑到现在你就会空手送我走。但上帝已看见我的痛楚和我双手的操劳，而在昨晚祂出示了判断。”
 
 
 
