--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -328,7 +328,7 @@
 “因为你已听从你妻子的话音并已以我命令了你不要吃的树为食，地面因你受咒诅；在你生命的所有日子，借着艰苦你才会从它有吃的。
 
 % Both thorns and thistles it will yield for you, and you will eat the plants of the field.
-\N 它会为你结出荆棘和刺蓟，而你会吃田野的植物。
+\N 它会同时为你结出荆棘和刺蓟，而你会吃田野的植物。
 
 % By the sweat of your brow you will eat your bread, until you return to the ground—because out of it were you taken. For dust you are, and to dust you shall return.”
 \N 你将由眉头的汗水吃食，直到你回归地面---因为你被取自于它。而你是尘土，也将回归尘土。”
