--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -3018,6 +3018,47 @@
 % If the God of my father, the God of Abraham and the Fear of Isaac, had not been with me, surely by now you would have sent me away empty-handed. But God has seen my affliction and the toil of my hands, and last night He rendered judgment.”
 \N 如果我父亲的上帝，亚伯拉罕的上帝和以撒所的敬畏，未曾与我同在，无疑到现在你就会空手送我走。但上帝已看见我的痛楚和我双手的操劳，而在昨晚祂出示了判断。”
 
+% Jacob’s Covenant with Laban
+\subsection*{雅各与拉班之约}
+
+% But Laban answered Jacob, “These daughters are my daughters, these sons are my sons, and these flocks are my flocks! Everything you see is mine! Yet what can I do today about these daughters of mine or the children they have borne?
+\N 但拉班回答雅各，“这些女儿是我的女儿，这些子孙是我的子孙，而这些羊群是我的羊群！你看见的一切都是我的！但今天我对我这些女儿或她们已生的孩子能做什么呢？
+% Come now, let us make a covenant, you and I, and let it serve as a witness between you and me.”
+\N 现在过来，让我们立一个协定，你与我，而让它充当你和我之间的一个见证。”
+
+
+% So Jacob picked out a stone and set it up as a pillar, 
+\N 所以雅各挑选了一块石头并将它作为一个石柱立起，
+% and he said to his relatives, “Gather some stones.” So they took stones and made a mound, and there by the mound they ate.
+\N 而他对他的亲戚说，“聚集一些石头。”所以他们取了石头并做成石丘，他们就在石丘旁那里吃了。
+% Laban called it Jegar-sahadutha, and Jacob called it Galeed.
+\N 拉班称它为伊迦尔撒哈杜他，而雅各称它为迦累得。
+
+% Then Laban declared, “This mound is a witness between you and me this day.”
+\N 然后拉班宣告，“这石丘是你和我之间今日的一个见证。”
+
+% Therefore the place was called Galeed.
+因此这地方被称为迦累得。
+% It was also called Mizpah, because Laban said, “May the LORD keep watch between you and me when we are absent from each other.
+\N 它也被称为米斯巴，因为拉班说，“愿耶和华当我们互不相见时仍在你和我之间监察。
+% If you mistreat my daughters or take other wives, although no one is with us, remember that God is a witness between you and me.”
+\N 如果你虐待我的女儿们或取其他妻子，尽管无人与我们一起，但要记得上帝是你和我之间的一个见证。”
+
+% Laban also said to Jacob, “Here is the mound, and here is the pillar I have set up between you and me.
+\N 拉班还对雅各说，“石丘在这里，我已在你和我之间立起的石柱也在这里。
+% This mound is a witness, and this pillar is a witness, that I will not go past this mound to harm you, and you will not go past this mound and pillar to harm me.
+\N 这石丘是一个见证，这石柱也是一个见证，以使我不会越过这石丘来伤害你，你也不会越过这石丘和石柱来伤害我。
+% May the God of Abraham and the God of Nahor, the God of their father, judge between us.”
+\N 愿亚伯拉罕的上帝和拿鹤的上帝，他们父亲的上帝，在我们之间评判。”
+
+% So Jacob swore by the Fear of his father Isaac.
+所以雅各以他父亲以撒的敬畏发了誓。
+
+% Then Jacob offered a sacrifice on the mountain and invited his relatives to eat a meal. And after they had eaten, they spent the night on the mountain.
+\N 然后雅各在山上供奉了献祭并邀请他的亲戚们吃饭。而在他们吃完之后，他们在山上过夜。
+% Early the next morning, Laban got up and kissed his grandchildren and daughters and blessed them. Then he left to return home.
+\N 第二天清早，拉班起身并亲吻他的外孙和女儿们并祝福他们。然后他离开返回家中。
+
 
 
 \thispagestyle{empty}
