--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -756,7 +756,7 @@
 % And God blessed Noah and his sons and said to them, “Be fruitful and multiply and fill the earth.
 \N 而上帝祝福挪亚和他的儿子们并对他们说，“要富有果实、倍增并充满大地。
 % The fear and dread of you will fall on every living creature on the earth, every bird of the air, every creature that crawls on the ground, and all the fish of the sea. They are delivered into your hand.
-\N 对你们的害怕与恐惧会降到地上每个生灵，空中的每个雀鸟，地面上爬行的每个生物，以及海里的所有鱼上。它们被交付到你们手中。
+\N 对你们的惧怕与恐惧会降到地上每个生灵，空中的每个雀鸟，地面上爬行的每个生物，以及海里的所有鱼上。它们被交付到你们手中。
 % Everything that lives and moves will be food for you; just as I gave you the green plants, I now give you all things.
 \N 活着的和活动的一切会作为你们的食物；正如我赐给你们绿植，我现在将万物赐给你们。
 % But you must not eat meat with its lifeblood still in it.
@@ -3059,7 +3059,40 @@
 % Early the next morning, Laban got up and kissed his grandchildren and daughters and blessed them. Then he left to return home.
 \N 第二天清早，拉班起身并亲吻他的外孙和女儿们并祝福他们。然后他离开返回家中。
 
+% Genesis 32
+\section{第三十二章}
 
+% Jacob Prepares to Meet Esau
+\subsection*{雅各准备去会见以扫}
+
+% Jacob also went on his way, and the angels of God met him.
+\N 雅各也继续上路，而上帝的众使者遇见了他。
+% When Jacob saw them, he said, “This is the camp of God.” So he named that place Mahanaim.
+\N 当雅各看见他们，他说，“这是上帝的营地。”所以他将那地方取名玛哈念。
+
+% Jacob sent messengers ahead of him to his brother Esau in the land of Seir, the country of Edom.
+\N 雅各派信使在他前面到他在西珥之地、以东之国的哥哥以扫那里，
+% He instructed them, “You are to say to my master Esau, ‘Your servant Jacob says: I have been staying with Laban and have remained there until now.
+\N 他指示他们，“你们要对我的主人以扫说，‘你的仆人雅各说：我之前一直和拉班呆在一起，并留在那里直到现在。
+% I have oxen, donkeys, flocks, menservants, and maidservants. I have sent this message to inform my master, so that I may find favor in your sight.’”
+\N 我有牛、驴、羊群、男仆和女仆。我已捎信给我的主人，以使我能在你的视域中得青睐。’”
+
+% When the messengers returned to Jacob, they said, “We went to your brother Esau, and now he is coming to meet you—he and four hundred men with him.”
+\N 当信使返回雅各身边时，他们说，“我们去到你哥哥以扫那里，而现在他正来会见你---他以及与他一起的四百人。”
+
+% In great fear and distress, Jacob divided his people into two camps, as well as the flocks and herds and camels.
+\N 在巨大的惧怕和忧痛中，雅各将他的族民，以及羊群、牛群和骆驼，分成两营。
+% He thought, “If Esau comes and attacks one camp, then the other camp can escape.”
+\N 他想，“如果以扫到来并攻击一营，那么另一营能逃脱。”
+
+% Then Jacob declared, “O God of my father Abraham, God of my father Isaac, the LORD who told me, ‘Go back to your country and to your kindred, and I will make you prosper,’
+\N 然后雅各宣告，“我祖父亚伯拉罕的上帝，我父亲以撒的上帝，告诉我，‘回到你的故乡和你亲属那里，而我会使你兴旺，’的耶和华啊，
+% I am unworthy of all the kindness and faithfulness You have shown Your servant. Indeed, with only my staff I came across the Jordan, but now I have become two camps.
+\N 我不配祢已向祢仆人展示的所有的宽仁和信实。确实，曾经我只用我的仗渡过了约旦河，现在我却已成为两营。
+% Please deliver me from the hand of my brother Esau, for I am afraid that he may come and attack me and the mothers and children with me.
+\N 请将我从我哥哥以扫的手中解救，因为我害怕他可能来攻击我以及与我一起的母亲和孩子们。
+% But You have said, ‘I will surely make you prosper, and I will make your offspring like the sand of the sea, too numerous to count.’”
+\N 但祢已说，‘无疑我会使你兴旺，而我会使你的后嗣像海里的沙一样，不可胜数。’”
 
 \thispagestyle{empty}
 \newpage
